--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ENV/
+StudentMerit
 .env
 For_app-2.md
 staticfiles/
@@ -6,3 +7,5 @@ db.sqlite3
 test_external.py
 populate_heroku.py
 data.json
+
+.gitignore
